# juguete2024

./: pyproject.toml
juguete2024/: .env  __init__.py  forms.py  models.py  views.py  worker.py
juguete2024/Services/: Pass.py  getConnection.py
juguete2024/static/: js.js
juguete2024/templates/: _helpers.html  layout.html  listado.html  register.html
juguete2024/templates/worker/: add_worker.html
